--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,6 @@
 	</scm>
 	<properties>
 		<java.version>22</java.version>
-		<org.mapstruct.version>1.6.0</org.mapstruct.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -66,6 +65,7 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.4.0</version>
         </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -74,13 +74,14 @@
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
-			<version>${org.mapstruct.version}</version>
-
+			<version>1.6.2</version>
+			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct-processor</artifactId>
-			<version>${org.mapstruct.version}</version>
+			<version>1.6.2</version>
 			<scope>provided</scope>
 		</dependency>
 
